updated for posthog

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 VITE_API_SECRET="1897f7c8af66c53cba41391e2f7c57a0"
+VITE_PUBLIC_POSTHOG_KEY=phc_aGnkPR4GMRbvxXVKAKj2MI7k4OJIG7UXEjVXD6Zl6Mv
+VITE_PUBLIC_POSTHOG_HOST=https://us.posthog.com
